--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -112,8 +112,8 @@ appointment_url = ""
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "twitter", icon_pack = "fab", name = "@insu_yun_en", link = "https://twitter.com/insu_yun_en"},
-  {icon = "github", icon_pack = "fab", name = "jakkdu", link = "https://twitter.com/insu_yun_en"},
+  # {icon = "twitter", icon_pack = "fab", name = "@insu_yun_en", link = "https://twitter.com/insu_yun_en"},
+  {icon = "github", icon_pack = "fab", name = "kaist-s4", link = "https://github.com/kaist-s4"},
   ]
 
 ############################
